# info-mc-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.api  Dockerfile.web  README.md  dev.sh  docker-compose.yml  nginx.conf
.github/workflows/: ci-rust.yml  ci-web.yml  docs.yml
apps/docs/: index.html  nav.js  search-index.json  search.js  style.css
apps/docs/api/: errors.html  index.html  players.html  rendering.html  servers.html
apps/docs/crates/: index.html  mc-api.html  mc-cache.html  mc-mojang.html  mc-motd.html  mc-protocol.html  mc-render3d.html  mc-skin.html
apps/docs/guide/: architecture.html  frontend.html  index.html  protocol.html  skin-rendering.html
apps/web/: .env.example  .gitignore  DA.md  IMAGES.md  README.md  package.json  vite.config.ts
apps/web/.storybook/: main.ts  preview.ts
apps/web/src/: app.css  app.html  hooks.server.ts
apps/web/src/lib/: index.ts  types.ts
apps/web/static/: robots.txt
crates/mc-api/: Cargo.toml
crates/mc-api/src/: error.rs  main.rs  state.rs
crates/mc-api/src/middleware/: admin_auth.rs  maintenance.rs  mod.rs  rate_limit.rs
crates/mc-api/src/routes/: cape_proxy.rs  docs.rs  favorites.rs  likes.rs  mod.rs  player.rs  popular.rs  render.rs  render3d.rs  server.rs  web.rs
crates/mc-api/src/routes/admin/: alerts.rs  analytics.rs  audit.rs  auth.rs  config.rs  dashboard.rs  export.rs  mod.rs  players.rs  servers.rs  totp.rs  users.rs
crates/mc-api/web/: app.css  app.js  index.html
crates/mc-cache/: Cargo.toml
crates/mc-cache/src/: lib.rs
crates/mc-mojang/: Cargo.toml
crates/mc-mojang/src/: client.rs  error.rs  lib.rs  types.rs
crates/mc-motd/: Cargo.toml
crates/mc-motd/src/: html.rs  lib.rs  parser.rs  plain.rs  types.rs
crates/mc-protocol/: Cargo.toml
crates/mc-protocol/examples/: ping.rs
crates/mc-protocol/src/: bedrock.rs  dns.rs  error.rs  lib.rs  query.rs  slp.rs  types.rs
crates/mc-render3d/: Cargo.toml
crates/mc-render3d/src/: error.rs  lib.rs  mesh.rs  renderer.rs
crates/mc-skin/: Cargo.toml
crates/mc-skin/src/: fetch.rs  lib.rs  render2d.rs
crates/mc-worldgen/: Cargo.toml
crates/mc-worldgen/src/: bedrock_random.rs  biome_tree.rs  biomes.rs  end.rs  end_city.rs  java_random.rs  lib.rs  multinoise.rs  nether.rs  octave_noise.rs  perlin.rs  slime.rs  structures.rs  xoroshiro.rs
docs/: ADMIN.md  API.md  FRONTEND.md  IMAGES.md  NBT-TEXTURE-MAPPING.md  NEW_TOOLS_PLAN.md  PROJECT.md  PROTOCOL.md  SKIN3D.md
(+208 files in other folders)
