[package]
name = "mc-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mc-api"
path = "src/main.rs"

[dependencies]
mc-protocol = { path = "../mc-protocol" }
mc-cache = { path = "../mc-cache" }
mc-motd = { path = "../mc-motd" }
mc-mojang = { path = "../mc-mojang" }
mc-skin = { path = "../mc-skin" }
mc-render3d = { path = "../mc-render3d" }

image = "0.25"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12" }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "set-header"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
sha2 = "0.10"
jsonwebtoken = "9"
rand = "0.8"
urlencoding = "2"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
