[package]
name = "mc-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "time", "io-util", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
hickory-resolver = { version = "0.25", features = ["system-config"] }
bytes = "1"
rand = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "net", "time", "io-util", "macros"] }
