[package]
name = "mc-render3d"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version = "24", features = ["spirv"] }
glam = "0.30"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt"] }
thiserror = "2"

[lib]
name = "mc_render3d"
path = "src/lib.rs"
